linechart: fix spacing when change from y1 to y2

--- a/frontend/src/app/shared/modules/dynamic-widgets/components/widgets.common.scss
+++ b/frontend/src/app/shared/modules/dynamic-widgets/components/widgets.common.scss
@@ -402,7 +402,7 @@ $widgets-common-config: (
             }
 
             .graph-row {
-                justify-content: stretch;
+                justify-content: center;
                 align-items: stretch;
             }
         }
